--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
 
 @import "~@/styles/iconfont.scss";
 @import "~@/styles/const.scss";
-@import "~@/styles/common.scss";
+@import "~@/styles/animate.scss";
 
 @import "~@/styles/components/label.scss";
 @import "~@/styles/components/input.scss";
@@ -16,3 +16,4 @@
 @import "~@/styles/components/page.scss";
 @import "~@/styles/components/tabs.scss";
 @import "~@/styles/components/dialog.scss";
+@import "~@/styles/components/message.scss";
