--- a/src/styles/components/message.scss
+++ b/src/styles/components/message.scss
@@ -4,7 +4,6 @@
   min-width: $message-width;
   max-width: 2 * $message-width;
   position: fixed;
-  top: 70px;
   left: 50%;
   display: flex;
   padding: 10px;
@@ -18,7 +17,9 @@
       height: $message-line-height;
       line-height: $message-line-height;
       text-align: center;
-      cursor: pointer;
+      &.close {
+        cursor: pointer;
+      }
     }
   }
   .xin-message-content {
@@ -27,8 +28,20 @@
     line-height: $message-line-height;
     font-size: $message-font-size;
   }
-  &.xin-message-success {
+  &.success {
     background: transparentize($message-success-color, 0);
+    color: #fff;
+  }
+  &.info {
+    background: transparentize($message-active-color, 0);
+    color: #fff;
+  }
+  &.warning {
+    background: transparentize($message-warning-color, 0);
+    color: #fff;
+  }
+  &.error {
+    background: transparentize($message-error-color, 0);
     color: #fff;
   }
 }
