--- a/src/styles/components/dialog.scss
+++ b/src/styles/components/dialog.scss
@@ -40,6 +40,7 @@
     .xin-dialog-body {
       background: #fff;
       font-size: $dialog-font-size;
+      line-height: $dialog-line-height - 10px;
       &.padding {
         padding: 20px 40px;
       }
