--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -189,5 +189,15 @@ $message-success-color: $color-green;
 $message-warning-color: $color-yellow;
 $message-error-color: $color-red;
 
+// model
+$model-width: 500px;
+$model-animate-time: $common-animate-time;
+$model-font-size: $font-size;
+$model-line-height: $line-height - 14px;
+$model-active-color: $color-blue;
+$model-success-color: $color-green;
+$model-warning-color: $color-yellow;
+$model-error-color: $color-red;
+
 
 
