--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,3 +17,4 @@
 @import "~@/styles/components/tabs.scss";
 @import "~@/styles/components/dialog.scss";
 @import "~@/styles/components/message.scss";
+@import "~@/styles/components/model.scss";
