--- a/src/styles/components/message.scss
+++ b/src/styles/components/message.scss
@@ -28,6 +28,7 @@
     margin-left: 10px;
     line-height: $message-line-height;
     font-size: $message-font-size;
+    word-break: break-all;
   }
   &.success {
     background: transparentize($message-success-color, 0);
