--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -199,5 +199,12 @@ $model-success-color: $color-green;
 $model-warning-color: $color-yellow;
 $model-error-color: $color-red;
 
-
+// steps
+$steps-font-size: $font-size;
+$steps-line-height: $line-height;
+$steps-default-color: $color-gray;
+$steps-active-color: $color-blue;
+$steps-success-color: $color-green;
+$steps-warning-color: $color-yellow;
+$steps-error-color: $color-red;
 
