--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,3 +18,4 @@
 @import "~@/styles/components/dialog.scss";
 @import "~@/styles/components/message.scss";
 @import "~@/styles/components/model.scss";
+@import "~@/styles/components/steps.scss";
