--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -208,3 +208,17 @@ $steps-success-color: $color-green;
 $steps-warning-color: $color-yellow;
 $steps-error-color: $color-red;
 
+// progress
+$progress-margin-right: $margin-right;
+$progress-font-size: $font-size;
+$progress-animate-time: 0.3s;
+$progress-line-height: $line-height;
+$progress-default-color: $color-gray;
+$progress-info-color: $color-blue;
+$progress-success-color: $color-green;
+$progress-warning-color: $color-yellow;
+$progress-error-color: $color-red;
+
+
+
+
