--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,3 +19,4 @@
 @import "~@/styles/components/message.scss";
 @import "~@/styles/components/model.scss";
 @import "~@/styles/components/steps.scss";
+@import "~@/styles/components/progress.scss";
