--- a/src/styles/animate.scss
+++ b/src/styles/animate.scss
@@ -40,7 +40,23 @@
 
 // steps
 @keyframes steps-animate {
-  0% {transform: scale(0.9);}
-  50% {transform: scale(1.2);}
-  100% {transform: scale(0.9);}
+  0% {
+    transform: scale(0.9);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(0.9);
+  }
+}
+
+// progress
+@keyframes progress-animate {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 50px 0;
+  }
 }
