--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,3 +20,4 @@
 @import "~@/styles/components/model.scss";
 @import "~@/styles/components/steps.scss";
 @import "~@/styles/components/progress.scss";
+@import "~@/styles/components/tooltip.scss";
