--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -219,6 +219,10 @@ $progress-success-color: $color-green;
 $progress-warning-color: $color-yellow;
 $progress-error-color: $color-red;
 
+// tooltip
+$tooltip-margin-right: $margin-right;
+$tooltip-font-size: $font-size;
+$tooltip-line-height: $line-height;
 
 
 
