--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -8,44 +8,47 @@
     margin-left: $tooltip-margin-right;
   }
   .xin-tooltip-content {
-    // display: inline-block;
     position: absolute;
     width: 0;
     height: 0;
+    z-index: 1000;
     .xin-tooltip-content-box {
-      width: 0;
-      .xin-tooltip-content-text {
-        font-size: $tooltip-font-size;
-        line-height: $tooltip-line-height;
-        text-align: center;
-        padding: 0 $tooltip-margin-right;
-        background: #000;
-        color: #fff;
-        display: inline-block;
-        white-space: nowrap;
-        opacity: 0.4;
-        position: relative;
-        &::before {
-          content: " ";
-          width: 10px;
-          height: 10px;
-          position: absolute;
+      position: relative;
+      .xin-tooltip-content-text-box {
+        position: absolute;
+        .xin-tooltip-content-text {
+          font-size: $tooltip-font-size;
+          line-height: $tooltip-line-height;
+          text-align: center;
+          padding: 0 $tooltip-margin-right;
           background: #000;
+          color: #fff;
+          display: inline-block;
+          white-space: nowrap;
+          position: relative;
+          &.radius {
+            border-radius: 5px;
+          }
+          &::before {
+            content: " ";
+            width: 10px;
+            height: 10px;
+            position: absolute;
+            background: #000;
+          }
         }
       }
     }
   }
   &.xin-tooltip-top {
     .xin-tooltip-content {
-      top: 0;
       left: 50%;
-      .xin-tooltip-content-box {
-        position: absolute;
-        bottom: 100%;
+      top: 0;
+      .xin-tooltip-content-text-box {
+        bottom: 10px;
         left: 0;
-        transform: translateY(-10px);
+        transform: translateX(-50%);
         .xin-tooltip-content-text {
-          transform: translateX(-50%);
           &::before {
             bottom: -5px;
             left: 50%;
@@ -57,13 +60,12 @@
   }
   &.xin-tooltip-right {
     .xin-tooltip-content {
-      top: 50%;
-      right: 0;
-      .xin-tooltip-content-box {
-        position: absolute;
+      left: 100%;
+      top: 50%;  
+      .xin-tooltip-content-text-box {
         top: 0;
-        left: 0;
-        transform: translateX(10px) translateY(-50%);
+        left: 10px;
+        transform: translateY(-50%);
         .xin-tooltip-content-text {
           &::before {
             left: -5px;
@@ -76,18 +78,16 @@
   }
   &.xin-tooltip-bottom {
     .xin-tooltip-content {
-      bottom: 0;
       left: 50%;
-      .xin-tooltip-content-box {
-        position: absolute;
-        top: 0;
+      bottom: 0;
+      .xin-tooltip-content-text-box {
+        top: 10px;
         left: 0;
-        transform: translateY(10px);
+        transform: translateX(-50%);
         .xin-tooltip-content-text {
-          transform: translateX(-50%);
           &::before {
-            top: -5px;
             left: 50%;
+            top: -5px;
             transform: translateX(-50%) rotate(45deg);
           }
         }
@@ -96,13 +96,12 @@
   }
   &.xin-tooltip-left {
     .xin-tooltip-content {
+      left: 0;
       top: 50%;
-      left: -100%;
-      .xin-tooltip-content-box {
-        position: absolute;
+      .xin-tooltip-content-text-box {
         top: 0;
-        left: 0;
-        transform: translateX(-10px) translateY(-50%);
+        right: 10px;
+        transform: translateY(-50%);
         .xin-tooltip-content-text {
           &::before {
             right: -5px;
