--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -221,6 +221,7 @@ $progress-error-color: $color-red;
 
 // tooltip
 $tooltip-margin-right: $margin-right;
+$tooltip-animate-time: 0.3s;
 $tooltip-font-size: $font-size;
 $tooltip-line-height: $line-height;
 
