--- a/src/styles/animate.scss
+++ b/src/styles/animate.scss
@@ -27,7 +27,6 @@
 }
 
 // message
-
 // 透明度 and 下移
 .xin-message-enter-active, .xin-message-leave-active {
   transition: all $message-animate-time;
@@ -59,4 +58,36 @@
   100% {
     background-position: 50px 0;
   }
+}
+
+// tooltip
+// 透明度 and 位移
+.xin-tooltip-enter-active, .xin-tooltip-leave-active {
+  transition: all $tooltip-animate-time;
+}
+.xin-tooltip-enter, .xin-tooltip-leave-to {
+  opacity: 0;
+}
+.xin-tooltip-top-enter-active, .xin-tooltip-top-leave-active,
+.xin-tooltip-right-enter-active, .xin-tooltip-right-leave-active,
+.xin-tooltip-bottom-enter-active, .xin-tooltip-bottom-leave-active,
+.xin-tooltip-left-enter-active, .xin-tooltip-left-leave-active {
+  transition: all $tooltip-animate-time;
+  transform: translate3d(0, 0, 0);
+}
+.xin-tooltip-top-enter, .xin-tooltip-top-leave-to {
+  opacity: 0;
+  transform: translate3d(0, -10px, 0);
+}
+.xin-tooltip-right-enter, .xin-tooltip-right-leave-to {
+  opacity: 0;
+  transform: translate3d(10px, 0, 0);
+}
+.xin-tooltip-bottom-enter, .xin-tooltip-bottom-leave-to {
+  opacity: 0;
+  transform: translate3d(0, 10px, 0);
+}
+.xin-tooltip-left-enter, .xin-tooltip-left-leave-to {
+  opacity: 0;
+  transform: translate3d(-10px, 0, 0);
 }
