--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -225,5 +225,17 @@ $tooltip-animate-time: 0.3s;
 $tooltip-font-size: $font-size;
 $tooltip-line-height: $line-height;
 
+// badge
+$badge-margin-right: $margin-right;
+$badge-animate-time: 0.3s;
+$badge-font-size: $font-size;
+$badge-line-height: $line-height;
+$badge-default-color: $color-gray;
+$badge-info-color: $color-blue;
+$badge-success-color: $color-green;
+$badge-warning-color: $color-yellow;
+$badge-error-color: $color-red;
+
+
 
 
