--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,3 +21,4 @@
 @import "~@/styles/components/steps.scss";
 @import "~@/styles/components/progress.scss";
 @import "~@/styles/components/tooltip.scss";
+@import "~@/styles/components/badge.scss";
