--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -236,6 +236,12 @@ $badge-success-color: $color-green;
 $badge-warning-color: $color-yellow;
 $badge-error-color: $color-red;
 
-
+// transfer
+$transfer-margin-right: $margin-right;
+$transfer-default-color: $color-gray;
+$transfer-info-color: $color-blue;
+$transfer-success-color: $color-green;
+$transfer-warning-color: $color-yellow;
+$transfer-error-color: $color-red;
 
 
