--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,3 +22,4 @@
 @import "~@/styles/components/progress.scss";
 @import "~@/styles/components/tooltip.scss";
 @import "~@/styles/components/badge.scss";
+@import "~@/styles/components/transfer.scss";
