--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,3 +23,4 @@
 @import "~@/styles/components/tooltip.scss";
 @import "~@/styles/components/badge.scss";
 @import "~@/styles/components/transfer.scss";
+@import "~@/styles/components/split.scss";
