--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -244,4 +244,9 @@ $transfer-success-color: $color-green;
 $transfer-warning-color: $color-yellow;
 $transfer-error-color: $color-red;
 
+// loading
+$loading-info-color: $color-blue;
+$loading-success-color: $color-green;
+$loading-warning-color: $color-yellow;
+$loading-error-color: $color-red;
 
