--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,3 +24,4 @@
 @import "~@/styles/components/badge.scss";
 @import "~@/styles/components/transfer.scss";
 @import "~@/styles/components/split.scss";
+@import "~@/styles/components/loading.scss";
