--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -250,3 +250,12 @@ $loading-success-color: $color-green;
 $loading-warning-color: $color-yellow;
 $loading-error-color: $color-red;
 
+// tips
+$tips-margin-right: $margin-right;
+$tips-animate-time: $common-animate-time;
+$tips-font-size: $font-size;
+$tips-line-height: $line-height - 14px;
+$tips-info-color: $color-blue;
+$tips-success-color: $color-green;
+$tips-warning-color: $color-yellow;
+$tips-error-color: $color-red;
