--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,3 +25,4 @@
 @import "~@/styles/components/transfer.scss";
 @import "~@/styles/components/split.scss";
 @import "~@/styles/components/loading.scss";
+@import "~@/styles/components/tips.scss";
