--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -259,3 +259,16 @@ $tips-info-color: $color-blue;
 $tips-success-color: $color-green;
 $tips-warning-color: $color-yellow;
 $tips-error-color: $color-red;
+
+// tag
+$tag-margin-right: $margin-right;
+$tag-animate-time: $common-animate-time;
+$tag-font-size: $font-size;
+$tag-line-height: $line-height - 10px;
+$tag-default-color: $color-gray;
+$tag-info-color: $color-blue;
+$tag-success-color: $color-green;
+$tag-warning-color: $color-yellow;
+$tag-error-color: $color-red;
+
+
