--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,3 +26,4 @@
 @import "~@/styles/components/split.scss";
 @import "~@/styles/components/loading.scss";
 @import "~@/styles/components/tips.scss";
+@import "~@/styles/components/tag.scss";
