--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -271,4 +271,6 @@ $tag-success-color: $color-green;
 $tag-warning-color: $color-yellow;
 $tag-error-color: $color-red;
 
+// grid
+$grid-font-size: $font-size;
 
