--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,3 +27,4 @@
 @import "~@/styles/components/loading.scss";
 @import "~@/styles/components/tips.scss";
 @import "~@/styles/components/tag.scss";
+@import "~@/styles/components/grid.scss";
