--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,3 +28,4 @@
 @import "~@/styles/components/tips.scss";
 @import "~@/styles/components/tag.scss";
 @import "~@/styles/components/grid.scss";
+@import "~@/styles/components/popover.scss";
