--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -1,155 +1,11 @@
 
 @import "~@/styles/const.scss";
 
-.xin-tooltip {
-  display: inline-block;
-  position: relative;
-  &+& {
-    margin-left: $tooltip-margin-right;
-  }
-  .xin-tooltip-content {
-    position: absolute;
-    width: 0;
-    height: 0;
-    z-index: 1000;
-    .xin-tooltip-content-box {
-      position: relative;
-      .xin-tooltip-content-text-box {
-        position: absolute;
-        .xin-tooltip-content-text {
-          font-size: $tooltip-font-size;
-          line-height: $tooltip-line-height;
-          text-align: center;
-          padding: 0 $tooltip-margin-right;
-          display: inline-block;
-          white-space: nowrap;
-          position: relative;
-          &.radius {
-            border-radius: 5px;
-          }
-          &.dark {
-            background: #000;
-            color: #fff;
-            &::before {
-              background: #000;
-            }
-          }
-          &.white {
-            background: #fff;
-            color: $tooltip-default-color;
-            box-shadow: 0 0 8px transparentize($tooltip-default-color, 0.4);
-            &::before {
-              background: #fff;
-            }
-          }
-          &.info {
-            background: $tooltip-info-color;
-            color: #fff;
-            &::before {
-              background: $tooltip-info-color;
-            }
-          }
-          &.success {
-            background: $tooltip-success-color;
-            color: #fff;
-            &::before {
-              background: $tooltip-success-color;
-            }
-          }
-          &.warning {
-            background: $tooltip-warning-color;
-            color: #fff;
-            &::before {
-              background: $tooltip-warning-color;
-            }
-          }
-          &.error {
-            background: $tooltip-error-color;
-            color: #fff;
-            &::before {
-              background: $tooltip-error-color;
-            }
-          }
-          &::before {
-            content: " ";
-            width: 10px;
-            height: 10px;
-            position: absolute;
-          }
-        }
-      }
-    }
-  }
-  &.xin-tooltip-top {
-    .xin-tooltip-content {
-      left: 50%;
-      top: 0;
-      .xin-tooltip-content-text-box {
-        bottom: 10px;
-        left: 0;
-        transform: translateX(-50%);
-        .xin-tooltip-content-text {
-          &::before {
-            bottom: -5px;
-            left: 50%;
-            transform: translateX(-50%) rotate(45deg);
-          }
-        }
-      }
-    }
-  }
-  &.xin-tooltip-right {
-    .xin-tooltip-content {
-      left: 100%;
-      top: 50%;  
-      .xin-tooltip-content-text-box {
-        top: 0;
-        left: 10px;
-        transform: translateY(-50%);
-        .xin-tooltip-content-text {
-          &::before {
-            left: -5px;
-            top: 50%;
-            transform: translateY(-50%) rotate(45deg);
-          }
-        }
-      }
-    }
-  }
-  &.xin-tooltip-bottom {
-    .xin-tooltip-content {
-      left: 50%;
-      bottom: 0;
-      .xin-tooltip-content-text-box {
-        top: 10px;
-        left: 0;
-        transform: translateX(-50%);
-        .xin-tooltip-content-text {
-          &::before {
-            left: 50%;
-            top: -5px;
-            transform: translateX(-50%) rotate(45deg);
-          }
-        }
-      }
-    }
-  }
-  &.xin-tooltip-left {
-    .xin-tooltip-content {
-      left: 0;
-      top: 50%;
-      .xin-tooltip-content-text-box {
-        top: 0;
-        right: 10px;
-        transform: translateY(-50%);
-        .xin-tooltip-content-text {
-          &::before {
-            right: -5px;
-            top: 50%;
-            transform: translateY(-50%) rotate(45deg);
-          }
-        }
-      }
-    }
-  }
+.xin-tooltip.xin-popover
+.xin-popover-content
+.xin-popover-content-box
+.xin-popover-content-text-box
+.xin-popover-content-text {
+  white-space: nowrap;
+  padding: 0 $tooltip-margin-right;
 }
