--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -221,14 +221,6 @@ $progress-error-color: $color-red;
 
 // tooltip
 $tooltip-margin-right: $margin-right;
-$tooltip-animate-time: 0.3s;
-$tooltip-font-size: $font-size;
-$tooltip-line-height: $line-height;
-$tooltip-default-color: $color-gray;
-$tooltip-info-color: $color-blue;
-$tooltip-success-color: $color-green;
-$tooltip-warning-color: $color-yellow;
-$tooltip-error-color: $color-red;
 
 // badge
 $badge-margin-right: $margin-right;
@@ -279,3 +271,13 @@ $tag-error-color: $color-red;
 // grid
 $grid-font-size: $font-size;
 
+// popover
+$popover-margin-right: $margin-right;
+$popover-animate-time: 0.3s;
+$popover-font-size: $font-size;
+$popover-line-height: $line-height;
+$popover-default-color: $color-gray;
+$popover-info-color: $color-blue;
+$popover-success-color: $color-green;
+$popover-warning-color: $color-yellow;
+$popover-error-color: $color-red;
