--- a/src/styles/iconfont.scss
+++ b/src/styles/iconfont.scss
@@ -1,4 +1,6 @@
 
+@import "./xin-iconfont/iconfont.css";
+
 @font-face {
   font-family: 'xin-iconfont';  /* project id 1855680 */
   src: url('//at.alicdn.com/t/font_1855680_09fvms8o38at.eot');
