--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,3 +29,4 @@
 @import "~@/styles/components/tag.scss";
 @import "~@/styles/components/grid.scss";
 @import "~@/styles/components/popover.scss";
+@import "~@/styles/components/icon.scss";
